[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/selection.tex" type="Texture" id=3]
[ext_resource path="res://scripts/selection.gd" type="Script" id=4]
[ext_resource path="res://assets/images/panel.tex" type="Texture" id=5]
[ext_resource path="res://scenes/counter.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/custom_panel.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 16, 16 )
margin/left = 3.125
margin/right = 3.125
margin/top = 4.125
margin/bottom = 4.125
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 16, 16 )
margin/left = 3.125
margin/right = 3.125
margin/top = 4.125
margin/bottom = 4.125
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="game" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="cards" type="Node2D" parent="."]

transform/pos = Vector2( 15, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="selection" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )
centered = false
script/script = ExtResource( 4 )

[node name="timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="status_panel" type="Panel" parent="."]

editor/display_folded = true
rect/min_size = Vector2( 88, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 133.0
margin/right = 182.0
margin/bottom = 152.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="time_countdown" parent="status_panel" instance=ExtResource( 6 )]

transform/pos = Vector2( 7, 5 )
count = 999
to = 0

[node name="miss_counter" parent="status_panel" instance=ExtResource( 6 )]

editor/display_folded = true
transform/pos = Vector2( 115, 5 )
to = 99
mode = 0

[node name="click2start_panel" parent="." instance=ExtResource( 7 )]

margin/left = 32.0
margin/top = 48.0
margin/right = 160.0
margin/bottom = 75.0
custom_styles/panel = SubResource( 2 )

[node name="text" parent="click2start_panel"]

text = "click to start"

[node name="gameover_panel" parent="." instance=ExtResource( 7 )]

visibility/visible = false
margin/left = 32.0
margin/top = 48.0
margin/right = 160.0
margin/bottom = 75.0
custom_styles/panel = SubResource( 2 )

[node name="start_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]

[connection signal="timeout" from="start_timer" to="." method="_start_game"]


[editable path="click2start_panel"]
